Fixed minor things

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       scroll-snap-align: start;
     }
     #landing {
-  background-color: ##7b7f65;
+  background-color: #7b7f65;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -192,7 +192,7 @@
 <p>Beyond coursework, I've collaborated with fellow students on real-world projects that enhanced my skills in Java, Spring Boot, and network design. I'm also continuously learning through platforms like GitHub and YouTube, and I enjoy solving technical problems, building useful applications, and experimenting with new frameworks and tools. My goal is to contribute meaningfully to modern software systems and to ensure the security and efficiency of digital platforms.</p>
 <p>Whether working on a network simulation or developing a full-stack web app, I believe in staying adaptable, solution-oriented, and committed to growth in this fast-evolving tech landscape.</p>
             </div>
-            <img src="coverPhoto.PNG" alt="Joshua Webber" style="width: 150px; height: auto; border-radius: 8px;" />
+            <img src="coverPhoto.JPG" alt="Joshua Webber" style="width: 150px; height: auto; border-radius: 8px;" />
           </div>
         </section>
 
@@ -200,7 +200,7 @@
           <h2>Education</h2>
           <ul>
             <li><strong>BSc Information Technology</strong> – North West University (2023 – Present)</li>
-            <li><strong>Matric</strong> – Emmanuel Private School (2021)</li>
+            <li><strong>Matric</strong> – Emmanuel Private School (2010 – 2021)</li>
           </ul>
         </section>
 
