--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
       color: black;
     }
     .section-wrapper {
-      height: 100vh;
-      width: 100%;
-      scroll-snap-type: y mandatory;
-      overflow-y: scroll;
-    }
+  min-height: 100vh;
+  width: 100%;
+  scroll-snap-type: y mandatory;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+}
     .snap-section {
       height: 100vh;
       scroll-snap-align: start;
@@ -220,15 +221,16 @@
 
       <div class="container">
         <section id="about" class="section active">
-          <div style="display: flex; align-items: flex-start; gap: 2rem;">
-            <div style="flex: 1;">
-              <p>Hi, I'm Joshua Webber, an aspiring IT student currently studying at North West University. I'm driven by a passion for technology and innovation, and I'm actively building a strong foundation in both software development and cybersecurity. My academic journey is fueled by a genuine curiosity to understand how systems work — from backend logic and APIs to network infrastructure and security mechanisms.</p>
-<p>Beyond coursework, I've collaborated with fellow students on real-world projects that enhanced my skills in Java, Spring Boot, and network design. I'm also continuously learning through platforms like GitHub and YouTube, and I enjoy solving technical problems, building useful applications, and experimenting with new frameworks and tools. My goal is to contribute meaningfully to modern software systems and to ensure the security and efficiency of digital platforms.</p>
-<p>Whether working on a network simulation or developing a full-stack web app, I believe in staying adaptable, solution-oriented, and committed to growth in this fast-evolving tech landscape.</p>
-            </div>
-            <img src="coverPhoto.JPG" alt="Joshua Webber" style="width: 100%; max-width: 150px; height: auto; border-radius: 8px;" onerror="this.style.display='none'" />
-          </div>
-        </section>
+  <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
+    <img src="coverPhoto.PNG" alt="Joshua Webber" style="width: 100%; max-width: 150px; height: auto; border-radius: 8px; object-fit: cover; margin-bottom: 1rem;" onerror="this.style.display='none'" />
+    <hr style="width: 60%; border: 0; height: 1px; background: #ccc; margin: 1.5rem auto;" />
+    <div style="max-width: 700px;">
+      <p>Hi, I'm Joshua Webber, an aspiring IT student currently studying at North West University. I'm driven by a passion for technology and innovation, and I'm actively building a strong foundation in both software development and cybersecurity. My academic journey is fueled by a genuine curiosity to understand how systems work — from backend logic and APIs to network infrastructure and security mechanisms.</p>
+      <p>Beyond coursework, I've collaborated with fellow students on real-world projects that enhanced my skills in Java, Spring Boot, and network design. I'm also continuously learning through platforms like GitHub and YouTube, and I enjoy solving technical problems, building useful applications, and experimenting with new frameworks and tools. My goal is to contribute meaningfully to modern software systems and to ensure the security and efficiency of digital platforms.</p>
+      <p>Whether working on a network simulation or developing a full-stack web app, I believe in staying adaptable, solution-oriented, and committed to growth in this fast-evolving tech landscape.</p>
+    </div>
+  </div>
+</section>
 
         <section id="education" class="section">
           <h2>Education</h2>
