--- a/index.html
+++ b/index.html
@@ -2,245 +2,92 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Joshua Webber | IT Student Portfolio</title>
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-    html, body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      scroll-behavior: smooth;
-      background-color: #9fa382;
-      color: black;
-    }
-    .section-wrapper {
-  min-height: 100vh;
-  width: 100%;
-  scroll-snap-type: y mandatory;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-}
-    .snap-section {
-      height: 100vh;
-      scroll-snap-align: start;
-    }
-    #landing {
-  background-color: #9fa382;$1
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 3rem;
-  text-align: center;
-}
-    .landing-left {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-    .landing-left h1 {
-      margin: 0;
-      font-size: 4rem;
-      font-weight: bold;
-    }
-    .landing-left .outlined {
-      background-color: #d6d6aa;
-      padding: 0.5rem 1.5rem;
-      margin: 1rem 0;
-    }
-    .landing-left .outlined h1 {
-      font-size: 3rem;
-      color: transparent;
-      -webkit-text-stroke: 2px black;
-      margin: 0;
-    }
-    .landing-left h2 {
-      font-size: 1.5rem;
-      font-weight: bold;
-      margin-top: 2rem;
-    }
-    .landing-card {
-      width: 300px;
-      background-color: #7b7f65;
-      border-radius: 12px;
-      overflow: hidden;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding-bottom: 1rem;
-    }
-    .landing-card img {
-      width: 100%;
-      height: auto;
-    }
-    header, footer {
-      background-color: #7b7f65;
-      color: white;
-      padding: 1rem;
-      text-align: center;
-    }
-    .container {
-      width: 90%;
-      max-width: 900px;
-      margin: auto;
-      padding: 2rem 1rem;
-    }
-    h1, h2 {
-      color: black;
-    }
-    nav {
-      text-align: center;
-      background-color: #d6d6aa;
-      padding: 1rem;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 0.5rem;
-    }
-    nav button {
-      background-color: #7b7f65;
-      color: white;
-      border: none;
-      padding: 0.5rem 1rem;
-      border-radius: 20px;
-      cursor: pointer;
-      flex: 1 1 auto;
-      min-width: 120px;
-    }
-    .section {
-      display: none;
-      opacity: 0;
-      transition: opacity 0.5s ease-in-out;
-    }
-    .section.active {
-      display: block;
-      opacity: 1;
-    }
-    ul {
-      list-style: none;
-      padding: 0;
-    }
-    li {
-      margin-bottom: 0.5rem;
-    }
-    .contact p {
-      margin: 0.3rem 0;
-    }
-    @media (max-width: 600px) {
-  #landing {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding: 2rem 1rem;
-  }
-  .landing-left h1 {
-    font-size: 2.5rem;
-  }
-  .landing-left .outlined h1 {
-    font-size: 2rem;
-    -webkit-text-stroke: 1px black;
-  }
-  .landing-left h2 {
-    font-size: 1.2rem;
-  }
-  nav {
-    flex-direction: column;
-    gap: 0.5rem;
-  }
-  nav button {
-    font-size: 0.9rem;
-    padding: 0.5rem;
-    min-width: 100%;
-  }
-  .container {
-    padding: 1rem;
-  }
-  .container > section {
-    flex-direction: column;
-    align-items: center;
-  }
-  .container img {
-    width: 100%;
-    max-width: 250px;
-    height: auto;
-    margin-top: 1rem;
-  }
-}
-      .landing-left {
-        align-items: center;
-      }
-    }
-      .nav-button {
-      background-color: #7b7f65;
-      color: white;
-      border: none;
-      padding: 0.5rem 1rem;
-      border-radius: 20px;
-      cursor: pointer;
-      min-width: 120px;
-      margin-top: 1rem;
-      font-size: 1rem;
-    }
-  </style>
+  <title>Joshua Webber | Portfolio Book</title>
+  <link rel="stylesheet" href="style.css" />
+  <script defer src="main.js"></script>
 </head>
 <body>
-  <div class="section-wrapper">
-    <!-- LANDING PAGE -->
-    <section id="landing" class="snap-section">
-      <div class="landing-left">
-        <h1>JOSHUA</h1>
-        <div class="outlined">
-          <h1>WEBBER</h1>
+
+<!-- Previous Button -->
+<button id="prev-btn">&lt;</button>
+
+<!-- Book -->
+<div id="book" class="book">
+
+  <!-- Page 1 -->
+  <div id="p1" class="paper">
+    <div class="front">
+      <div id="f1" class="front-content">
+        <div class="text-wrapper">
+          <h1 class="book-title">
+            <span class="filled">Joshua</span> <span class="outlined">Webber</span>
+          </h1>
+          <p class="subtitle">Welcome to my portfolio</p>
+          <img class="cover-img" src="./coverPhoto.PNG" alt="Joshua Webber">
         </div>
-        <h2>WELCOME TO MY PORTFOLIO</h2>
-        <button onclick="scrollToPortfolio()" style="margin-top: 2rem; padding: 1rem 2rem; font-size: 1rem; border: none; border-radius: 40px; background-color: #7b7f65; color: white; font-weight: bold; cursor: pointer;">
-  CLICK HERE TO SEE MORE
-</button>
       </div>
-    </section>
-
-    <!-- MAIN PORTFOLIO CONTENT -->
-    <section id="mainContent" class="snap-section">
-      <header>
-        <h1>Joshua Webber</h1>
-        <p>BSc IT Student | Software Development & Cybersecurity Enthusiast</p>
-      </header>
-
-      <nav>
-        <button onclick="showTab('about')">About</button>
-        <button onclick="showTab('education')">Education</button>
-        <button onclick="showTab('experience')">Experience</button>
-        <button onclick="showTab('projects')">Projects</button>
-        <button onclick="showTab('skills')">Skills</button>
-      </nav>
-
-      <div class="container">
-        <section id="about" class="section active">
-  <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-    <img src="coverPhoto.PNG" alt="Joshua Webber" style="width: 100%; max-width: 150px; height: auto; border-radius: 8px; object-fit: cover; margin-bottom: 1rem;" onerror="this.style.display='none'" />
-    <hr style="width: 60%; border: 0; height: 1px; background: #ccc; margin: 1.5rem auto;" />
-    <div style="max-width: 700px;">
-      <p>Hi, I'm Joshua Webber, an aspiring IT student currently studying at North West University. I'm driven by a passion for technology and innovation, and I'm actively building a strong foundation in both software development and cybersecurity. My academic journey is fueled by a genuine curiosity to understand how systems work — from backend logic and APIs to network infrastructure and security mechanisms.</p>
-      <p>Beyond coursework, I've collaborated with fellow students on real-world projects that enhanced my skills in Java, Spring Boot, and network design. I'm also continuously learning through platforms like GitHub and YouTube, and I enjoy solving technical problems, building useful applications, and experimenting with new frameworks and tools. My goal is to contribute meaningfully to modern software systems and to ensure the security and efficiency of digital platforms.</p>
-      <p>Whether working on a network simulation or developing a full-stack web app, I believe in staying adaptable, solution-oriented, and committed to growth in this fast-evolving tech landscape.</p>
+    </div>
+    <div class="back">
+      <div id="b1" class="back-content">
+        <div class="toc">
+          <h2>Table of Contents</h2>
+          <ol>
+            <li>About Me</li>
+            <li>Education</li>
+            <li>Experience</li>
+            <li>Projects</li>
+            <li>Skills</li>
+            <li>Contact</li>
+          </ol>
+        </div>
+      </div>
     </div>
   </div>
-</section>
 
-        <section id="education" class="section">
+  <!-- Page 2 -->
+  <div id="p2" class="paper">
+    <div class="front">
+      <div id="f2" class="front-content">
+        <div class="about-section">
+          <h2>About Me</h2>
+          <p>
+            I'm Joshua Webber, an enthusiastic IT student passionate about technology, problem-solving, and continuous learning.
+          </p>
+          <p>
+            I enjoy building efficient systems, exploring networking, and collaborating on full-stack development projects.
+          </p>
+          <p>
+            My interests include software engineering, cybersecurity, and AI. I thrive in both individual and team environments, always looking to improve and innovate.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="back">
+      <div id="b2" class="back-content">
+        <div class="education-section">
           <h2>Education</h2>
           <ul>
-            <li><strong>BSc Information Technology</strong> – North West University (2023 – Present)</li>
-            <li><strong>Matric</strong> –Emmanuel Private School (2021)</li>
+            <li>
+              <strong>BSc in Information Technology</strong><br>
+              North West University (2022 – Present)
+            </li>
+            <li>
+              <strong>Matric</strong><br>
+              Emmanuel Private School (Graduated 2021)
+            </li>
           </ul>
-        </section>
+        </div>
+      </div>
+    </div>
+  </div>
 
-        <section id="experience" class="section">
+  <!-- Page 3 -->
+  <div id="p3" class="paper">
+    <div class="front">
+      <div id="f3" class="front-content">
+        <div class="experience-section">
           <h2>Experience</h2>
           <p><strong>Sales Assistant – Lemon Garage (2021 – Present)</strong></p>
           <ul>
@@ -250,18 +97,37 @@
             <li>Run errands (fetch cars, documents, etc.)</li>
             <li>Collaborate with the sales team to improve efficiency</li>
           </ul>
-        </section>
-
-        <section id="projects" class="section">
+        </div>
+      </div>
+    </div>
+    <div class="back">
+      <div id="b3" class="back-content">
+        <div class="projects-section">
           <h2>Projects</h2>
           <ul>
-            <li><strong><a href="https://github.com/Doctor1ven/Academix" target="_blank" style="color: black; text-decoration: none;">Academix – Student Result Processing System (Java)</a>:</strong> A desktop application built using Core Java with JavaFX and SceneBuilder. It supports role-based access (student, lecturer, admin) and manages student results, course enrollments, user control, and encrypted password protection via AES and SHA-256.</li>
-            <li><strong><a href="https://github.com/clowiiza1/pawpal-backend" target="_blank" style="color: black; text-decoration: none;">PawPal – Full Stack Adoption Platform</a>:</strong> A full-stack application built with React.js, Tailwind.css, Spring Boot (Java), and MySQL, hosted using AWS Amplify, S3, and EC2. Includes secure frontend/backend integration, cloud deployment, and RESTful APIs.</li>
-            <li><strong><a href="https://github.com/clowiiza1/networkproject" target="_blank" style="color: black; text-decoration: none;">Enterprise Network Simulation (Cisco Packet Tracer)</a>:</strong> A complete enterprise network with segmented VLANs, DHCP, ACLs, SSH remote access, wireless and wired infrastructure, and simulated internet connectivity — designed for a fictional company.</li>
+            <li>
+              <strong><a href="https://github.com/Doctor1ven/Academix" target="_blank">Academix</a>:</strong>
+              A JavaFX desktop application with role-based access, encrypted login, and full academic management.
+            </li>
+            <li>
+              <strong><a href="https://github.com/clowiiza1/pawpal-backend" target="_blank">PawPal</a>:</strong>
+              A full-stack pet adoption app using React, Spring Boot, and AWS. Includes cloud deployment, RESTful APIs, and secure integration.
+            </li>
+            <li>
+              <strong><a href="https://github.com/clowiiza1/networkproject" target="_blank">Enterprise Network Simulation</a>:</strong>
+              Cisco Packet Tracer enterprise network design with VLANs, DHCP, ACLs, SSH, and internet simulation.
+            </li>
           </ul>
-        </section>
+        </div>
+      </div>
+    </div>
+  </div>
 
-        <section id="skills" class="section">
+  <!-- Page 4 -->
+  <div id="p4" class="paper">
+    <div class="front">
+      <div id="f4" class="front-content">
+        <div class="skills-section">
           <h2>Skills</h2>
           <ul>
             <li><strong>Languages:</strong> Python, Java, C++, C#, HTML/CSS, SQL</li>
@@ -269,30 +135,27 @@
             <li><strong>Networking:</strong> IP Addressing, Subnetting, Routing (Cisco Packet Tracer)</li>
             <li><strong>Other:</strong> Microsoft Office Suite, Canva</li>
           </ul>
-        </section>
+        </div>
       </div>
-
-      <footer>
-        <h2>Contact</h2>
-        <p>📞 082 812 7997 | 📧 <a href="mailto:jj.webber@outlook.com" style="color: white; text-decoration: none;">jj.webber@outlook.com</a></p>
-        <p>
-          <a href="https://www.linkedin.com/in/joshua-webber-a75873376" target="_blank" style="color: white; text-decoration: none; margin-right: 1rem;">🔗 LinkedIn</a>
-          <a href="https://github.com/Doctor1ven" target="_blank" style="color: white; text-decoration: none;">🐱 GitHub</a>
-        </p>
-      </footer>
-    </section>
+    </div>
+    <div class="back">
+      <div id="b4" class="back-content">
+        <div class="contact-section">
+          <h2>Contact</h2>
+          <p>📞 082 812 7997 | 📧 <a href="mailto:jj.webber@outlook.com">jj.webber@outlook.com</a></p>
+          <p>
+            <a href="https://www.linkedin.com/in/joshua-webber-a75873376" target="_blank">🔗 LinkedIn</a>
+            <a href="https://github.com/Doctor1ven" target="_blank">🐱 GitHub</a>
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
 
-  <script>
-    function showTab(tabId) {
-      document.querySelectorAll('.section').forEach(section => {
-        section.classList.remove('active');
-      });
-      document.getElementById(tabId).classList.add('active');
-    }
-    function scrollToPortfolio() {
-      document.getElementById('mainContent').scrollIntoView({ behavior: 'smooth' });
-    }
-  </script>
+</div>
+
+<!-- Next Button -->
+<button id="next-btn">&gt;</button>
+
 </body>
 </html>
